--- a/configuration.properties
+++ b/configuration.properties
@@ -2,4 +2,5 @@ browser=chrome
 username=John Doe
 password=ThisIsNotAPassword
 name=KUBA
+qa_fox=https://tutorialsninja.com/demo/index.php?route=common/home
 
