--- a/configuration.properties
+++ b/configuration.properties
@@ -3,4 +3,5 @@ username=John Doe
 password=ThisIsNotAPassword
 name=KUBA
 qa_fox=https://tutorialsninja.com/demo/index.php?route=common/home
+blazeurl=https://www.demoblaze.com/
 
