--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
 
     </dependencies>
 
